Safari365 Prod/src/objects/OPP__c.object
<CustomObject>
    <fields>
        <fullName>OPD_ID__c</fullName>
        <externalId>true</externalId>
        <label>OPD_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPT_ID__c</fullName>
        <label>OPT_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_PXB10__c</fullName>
        <label>PRICE_PXB10</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_PXB11__c</fullName>
        <label>PRICE_PXB11</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_PXB12__c</fullName>
        <label>PRICE_PXB12</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>OPP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OPD_ID__c</columns>
        <columns>OPT_ID__c</columns>
        <columns>PRICE_PXB10__c</columns>
        <columns>PRICE_PXB11__c</columns>
        <columns>PRICE_PXB12__c</columns>
        <columns>PRICE_PXB13__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPP-{000000000}</displayFormat>
        <label>OPP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>